--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.ecommerce.inventario</groupId>
 	<artifactId>inventario</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>inventario</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<version>9.4.1.jre8</version>
+			<version>12.6.1.jre11</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
