--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=inventario
-spring.datasource.username=sa
-spring.datasource.password=4123Qwe!
-spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=dev
